Update : 添加 關注/比較/申購按鈕顯示判斷和初始化設定

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/BuyHouse.cshtml
@@ -2157,7 +2157,7 @@
                 // 每月投入金額
                 let monthlyInvestmentVal = parseFloat(monthlyInvestment) * 10000;
 
-                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, downPaymentVal) * 12, 4);
+                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, downPaymentVal, 0, 0.1) * 12, 4);
             };
             //#endregion
 
