--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/EducationFund.cshtml
@@ -2155,7 +2155,7 @@
                 // 每月投入金額
                 let monthlyInvestmentVal = parseFloat(monthlyInvestment) * 10000;
 
-                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, educationalFundVal) * 12, 4);
+                return formulajs.ROUNDUP(formulajs.RATE(yearsVal, -monthlyInvestmentVal, -amountPreparedVal, educationalFundVal, 0, 0.1) * 12, 4)
             };
             //#endregion
 
