Update : 調整 loading()

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/Saving.cshtml
@@ -1642,7 +1642,7 @@
             //#region 開始試算按鈕綁定事件
             $("#Calculate").click(function () {
                 if (clickCheck()) {
-                    window.loading('show');
+                    loading();
 
                     // 隱藏試算 HTML
                     $("#CalculateDescription").addClass("u-hidden");
