--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GlobalIndex/GlobalIndexDetailWrap.cshtml
@@ -682,7 +682,93 @@
     </div>
 </div>
 
-<script id="template" type="text/html">
+<script id="template1" type="text/html">
+    <tr>
+        <td class="u-left u-wrap">
+            <div class="u-ellipsis-1lt">
+                <% if (DetailLink) { %>
+                    <a href="<%= DetailLink %>" class="o-contentLink t-bold" target="_blank"><%= id %> <%= name %></a>
+                <% } else { %>
+                    <span class="t-bold"><%= name %></span>
+                <% } %>
+            </div>
+        </td>
+        <td>
+            <% if (typeof d1 == "number" && !isNaN(d1) && d1 >= 0) { %>
+                <span class="o-rise"><%= d1.toFixed(2) %>%</span>
+            <% } else if (typeof d1 == "number" && !isNaN(d1) && d1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(d1).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof d7 == "number" && !isNaN(d7) && d7 >= 0) { %>
+                <span class="o-rise"><%= d7.toFixed(2) %>%</span>
+            <% } else if (typeof d7 == "number" && !isNaN(d7) && d7 < 0) { %>
+                <span class="o-fall"><%= Math.abs(d7).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof m1 == "number" && !isNaN(m1) && m1 >= 0) { %>
+                <span class="o-rise"><%= m1.toFixed(2) %>%</span>
+            <% } else if (typeof m1 == "number" && !isNaN(m1) && m1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m1).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof m3 == "number" && !isNaN(m3) && m3 >= 0) { %>
+                <span class="o-rise"><%= m3.toFixed(2) %>%</span>
+            <% } else if (typeof m3 == "number" && !isNaN(m3) && m3 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m3).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof m6 == "number" && !isNaN(m6) && m6 >= 0) { %>
+                <span class="o-rise"><%= m6.toFixed(2) %>%</span>
+            <% } else if (typeof m6 == "number" && !isNaN(m6) && m6 < 0) { %>
+                <span class="o-fall"><%= Math.abs(m6).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof y1 == "number" && !isNaN(y1) && y1 >= 0) { %>
+                <span class="o-rise"><%= y1.toFixed(2) %>%</span>
+            <% } else if (typeof y1 == "number" && !isNaN(y1) && y1 < 0) { %>
+                <span class="o-fall"><%= Math.abs(y1).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof ytd == "number" && !isNaN(ytd) && ytd >= 0) { %>
+                <span class="o-rise"><%= ytd.toFixed(2) %>%</span>
+            <% } else if (typeof ytd == "number" && !isNaN(ytd) && ytd < 0) { %>
+                <span class="o-fall"><%= Math.abs(ytd).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+        <td>
+            <% if (typeof y3 == "number" && !isNaN(y3) && y3 >= 0) { %>
+                <span class="o-rise"><%= y3.toFixed(2) %>%</span>
+            <% } else if (typeof y3 == "number" && !isNaN(y3) && y3 < 0) { %>
+                <span class="o-fall"><%= Math.abs(y3).toFixed(2) %>%</span>
+            <% } else { %>
+                <span>-</span>
+            <% } %>
+        </td>
+    </tr>
+</script>
+
+<script id="template2" type="text/html">
     <tr>
         <td class="u-left u-wrap">
             <div class="u-ellipsis-1lt">
@@ -816,7 +902,7 @@
             if (RelevantGlobalIndex_Success == "Success") {
                 if (RelevantGlobalIndex.length > 0) {
                     var fjs1 = FilterJS(RelevantGlobalIndex, '#GlobalIndexTBody', {
-                        template: '#template',
+                        template: '#template2',
                         callbacks: {
                             afterFilter: function (result) {
                                 window.loading('hide');
@@ -883,7 +969,7 @@
             if (RelevantFund_Success == "Success") {
                 if (RelevantFund.length > 0) {
                     var fjs2 = FilterJS(RelevantFund, '#FundPriceTBody', {
-                        template: '#template',
+                        template: '#template1',
                         callbacks: {
                             afterFilter: function (result) {
                                 window.loading('hide');
@@ -950,7 +1036,7 @@
             if (RelevantETF_Success == "Success") {
                 if (RelevantETF.length > 0) {
                     var fjs3 = FilterJS(RelevantETF, '#ETFPriceTBody', {
-                        template: '#template',
+                        template: '#template1',
                         callbacks: {
                             afterFilter: function (result) {
                                 window.loading('hide');
