#4188 比較頁下方表格 點擊產品名稱後  詳細頁應另開

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -789,7 +789,7 @@
     <tr>
         <td class="u-left">
             <% if (DetailLink) { %>
-            <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+            <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
             <% } else { %>
             <span class="c-legend__name"><%= lable.id %> <%= name %></span>
             <% } %>
@@ -866,7 +866,7 @@
     <tr>
         <td class="u-left">
             <% if (DetailLink) { %>
-            <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+            <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
             <% } else { %>
             <span class="c-legend__name"><%= lable.id %> <%= name %></span>
             <% } %>
@@ -943,7 +943,7 @@
     <tr>
         <td class="u-left u-wrap">
             <% if (DetailLink) { %>
-            <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+            <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
             <% } else { %>
             <span class="c-legend__name"><%= lable.id %> <%= name %></span>
             <% } %>
@@ -987,7 +987,7 @@
     <tr>
         <td class="u-left">
             <% if (DetailLink) { %>
-            <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+            <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
             <% } else { %>
             <span class="c-legend__name"><%= lable.id %> <%= name %></span>
             <% } %>
@@ -1011,7 +1011,7 @@
         <td class="c-cardTable__header">
             <div class="c-cardTable__content">
                 <% if (DetailLink) { %>
-                <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+                <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
                 <% } else { %>
                 <span class="c-legend__name"><%= lable.id %> <%= name %></span>
                 <% } %>
@@ -1086,7 +1086,7 @@
     <tr>
         <td class="u-left u-wrap">
             <% if (DetailLink) { %>
-            <a href="<%= DetailLink %>" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
+            <a href="<%= DetailLink %>" target="_blank" class="c-legend c-legend--link" style="--legend-color:<%= lable.color %>"><span class="c-legend__name"><%= lable.id %> <%= name %></span></a>
             <% } else { %>
             <span class="c-legend__name"><%= lable.id %> <%= name %></span>
             <% } %>
