Update: ETF排行榜，拿掉標頭(%)、折溢價顯示小數點兩位

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
@@ -107,7 +107,7 @@
                                 </th>
                                 <th>
                                     <div class="c-table__title">
-                                        <span>管理費(%)</span>
+                                        <span>管理費</span>
                                         <a href="#" class="o-sorting" data-sorting-column="TotalManagementFee"></a>
                                     </div>
                                 </th>
