--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
@@ -88,7 +88,7 @@
                                 </th>
                                 <th>
                                     <div class="c-table__title">
-                                        <span>折溢價(%)</span>
+                                        <span>折溢價</span>
                                         <a href="#" class="o-sorting" data-sorting-column="DiscountPremium"></a>
                                     </div>
                                 </th>
