--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtfReturnView.cshtml
@@ -74,7 +74,7 @@
 					</div>
 				</td>
 				<td class="c-cardTable__body" data-card-table-width="1/2">
-					<div class="c-cardTable__title" data-length="5">折溢價(%)</div>
+					<div class="c-cardTable__title" data-length="5">折溢價</div>
 					@if (item.DiscountPremiumFormat != null)
 					{
 						if (item.DiscountPremiumFormat >= 0)
