--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
@@ -99,7 +99,7 @@
 								</th>
 								<th>
 									<div class="c-table__title">
-										<span>折溢價(%)</span>
+										<span>折溢價</span>
 										<a href="#" class="o-sorting" data-sorting-column="DiscountPremium"></a>
 									</div>
 								</th>
@@ -184,7 +184,7 @@
 											</div>
 										</td>
 										<td class="c-cardTable__body" data-card-table-width="1/2">
-											<div class="c-cardTable__title" data-length="5">折溢價(%)</div>
+											<div class="c-cardTable__title" data-length="5">折溢價</div>
 											@if (item.DiscountPremium >= 0)
 											{
 												<div class="c-cardTable__content">
