--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
@@ -53,7 +53,7 @@
 				</div>
 			</td>
 			<td class="c-cardTable__body" data-card-table-width="1/2">
-				<div class="c-cardTable__title" data-length="5">折溢價(%)</div>
+				<div class="c-cardTable__title" data-length="5">折溢價</div>
 				@if (item.DiscountPremium >= 0)
 				{
 					<div class="c-cardTable__content">
