--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -84,7 +84,7 @@
                                 </th>
                                 <th>
                                     <div class="c-table__title">
-                                        <span>折溢價(%)</span>
+                                        <span>折溢價</span>
                                         <a href="#" class="o-sorting" data-sorting-column="DiscountPremium"></a>
                                     </div>
                                 </th>
@@ -154,7 +154,7 @@
                                             <div class="c-cardTable__content">@item.MarketPrice<br><span class="t-date">@item.NetAssetValueDateFormat</span></div>
                                         </td>
                                         <td class="c-cardTable__body" data-card-table-width="1/2">
-                                            <div class="c-cardTable__title" data-length="5">折溢價(%)</div>
+                                            <div class="c-cardTable__title" data-length="5">折溢價</div>
                                             @if (item.DiscountPremium < 0)
                                             {
                                                 <span class="o-fall">@item.DiscountPremium%</span>
